kubernetes/tandoor/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
