kubernetes/tandoor/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-internal
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "tandoor-internal"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: recipes.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /static
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-external
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: "ddns.yuha0.com"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "tandoor-external"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
spec:
  ingressClassName: nginx-external
  rules:
  - host: recipes.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /static
        pathType: Prefix
  tls:
    - hosts:
      - recipes.yuha0.com
      secretName: recipes-tls-certificate
